@@ -1,66 +1,69 @@
 package com.microsoft.applicationinsights.internal.config.connection;
 
-import com.google.common.annotations.VisibleForTesting;
 import com.microsoft.applicationinsights.internal.config.connection.ConnectionString.Defaults;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 public class EndpointProvider {
-    @VisibleForTesting static final String INGESTION_URI_PATH = "v2/track";
-    @VisibleForTesting static final String LIVE_URI_PATH = "QuickPulseService.svc";
-    @VisibleForTesting static final String API_PROFILES_APP_ID_URI_PREFIX = "api/profiles/"; // <base uri, with host>/api/profiles/<ikey>/appid
-    @VisibleForTesting static final String API_PROFILES_APP_ID_URI_SUFFIX = "/appId";
+    // visible for testing
+    static final String INGESTION_URL_PATH = "v2.1/track";
+    // visible for testing
+    static final String LIVE_URL_PATH = "QuickPulseService.svc";
+    // visible for testing
+    static final String API_PROFILES_APP_ID_URL_PREFIX = "api/profiles/"; // <base uri, with host>/api/profiles/<ikey>/appid
+    // visible for testing
+    static final String API_PROFILES_APP_ID_URL_SUFFIX = "/appId";
 
-    private volatile URI ingestionEndpoint;
-    private volatile URI ingestionEndpointURL;
-    private volatile URI liveEndpointURL;
-    private volatile URI profilerEndpoint;
-    private volatile URI snapshotEndpoint;
-    private volatile URI statsbeatEndpointUrl;
+    private volatile URL ingestionEndpoint;
+    private volatile URL ingestionEndpointUrl;
+    private volatile URL liveEndpointUrl;
+    private volatile URL profilerEndpoint;
+    private volatile URL snapshotEndpoint;
+    private volatile URL statsbeatEndpointUrl;
 
     public EndpointProvider() {
         try {
-            ingestionEndpoint = new URI(Defaults.INGESTION_ENDPOINT);
-            ingestionEndpointURL = buildIngestionUri(ingestionEndpoint);
-            liveEndpointURL = buildLiveUri(new URI(Defaults.LIVE_ENDPOINT));
-            profilerEndpoint = new URI(Defaults.PROFILER_ENDPOINT);
-            snapshotEndpoint = new URI(Defaults.SNAPSHOT_ENDPOINT);
-            statsbeatEndpointUrl = buildIngestionUri(ingestionEndpoint);
-        } catch (URISyntaxException e) {
+            ingestionEndpoint = new URL(Defaults.INGESTION_ENDPOINT);
+            ingestionEndpointUrl = buildIngestionUrl(ingestionEndpoint);
+            liveEndpointUrl = buildLiveUri(new URL(Defaults.LIVE_ENDPOINT));
+            profilerEndpoint = new URL(Defaults.PROFILER_ENDPOINT);
+            snapshotEndpoint = new URL(Defaults.SNAPSHOT_ENDPOINT);
+            statsbeatEndpointUrl = ingestionEndpointUrl;
+        } catch (MalformedURLException e) {
             throw new IllegalStateException("ConnectionString.Defaults are invalid", e);
         }
     }
 
-    private URI buildIngestionUri(URI baseUri) throws URISyntaxException {
-        return buildUri(baseUri, INGESTION_URI_PATH);
+    private URL buildIngestionUrl(URL baseUri) throws MalformedURLException {
+        return buildUrl(baseUri, INGESTION_URL_PATH);
     }
 
-    private URI buildLiveUri(URI baseUri) throws URISyntaxException {
-        return buildUri(baseUri, LIVE_URI_PATH);
+    private URL buildLiveUri(URL baseUri) throws MalformedURLException {
+        return buildUrl(baseUri, LIVE_URL_PATH);
     }
 
-    public URI getIngestionEndpointURL() {
-        return ingestionEndpointURL;
+    public URL getIngestionEndpointUrl() {
+        return ingestionEndpointUrl;
     }
 
-    public URI getStatsbeatEndpointUrl() {
+    public URL getStatsbeatEndpointUrl() {
         return statsbeatEndpointUrl;
     }
 
-    public synchronized URI getAppIdEndpointURL(String instrumentationKey) {
-        return buildAppIdUri(instrumentationKey);
+    public synchronized URL getAppIdEndpointUrl(String instrumentationKey) {
+        return buildAppIdUrl(instrumentationKey);
     }
 
-    private URI buildAppIdUri(String instrumentationKey) {
+    private URL buildAppIdUrl(String instrumentationKey) {
         try {
-            return buildUri(ingestionEndpoint, API_PROFILES_APP_ID_URI_PREFIX +instrumentationKey+ API_PROFILES_APP_ID_URI_SUFFIX);
-        } catch (URISyntaxException e) {
-            throw new IllegalArgumentException("Invalid instrumentationKey: "+instrumentationKey);
+            return buildUrl(ingestionEndpoint, API_PROFILES_APP_ID_URL_PREFIX +instrumentationKey+ API_PROFILES_APP_ID_URL_SUFFIX);
+        } catch (MalformedURLException e) {
+            throw new IllegalArgumentException("Invalid instrumentationKey: "+instrumentationKey, e);
         }
     }
 
-    URI buildUri(URI baseUri, String appendPath) throws URISyntaxException {
+    URL buildUrl(URL baseUri, String appendPath) throws MalformedURLException {
         String uriString = baseUri.toString();
         if (!uriString.endsWith("/")) {
             uriString = uriString + "/";
@@ -70,55 +73,55 @@ public class EndpointProvider {
             appendPath = appendPath.substring(1);
         }
 
-        return new URI(uriString + appendPath);
+        return new URL(uriString + appendPath);
     }
 
-    public URI getIngestionEndpoint() {
+    public URL getIngestionEndpoint() {
         return ingestionEndpoint;
     }
 
-    void setIngestionEndpoint(URI ingestionEndpoint) {
+    void setIngestionEndpoint(URL ingestionEndpoint) {
         try {
-            this.ingestionEndpointURL = buildIngestionUri(ingestionEndpoint);
-        } catch (URISyntaxException e) {
+            this.ingestionEndpointUrl = buildIngestionUrl(ingestionEndpoint);
+        } catch (MalformedURLException e) {
             throw new IllegalStateException("Could not construct ingestion endpoint uri", e);
         }
         this.ingestionEndpoint = ingestionEndpoint;
     }
 
-    public URI getLiveEndpointURL() {
-        return liveEndpointURL;
+    public URL getLiveEndpointUrl() {
+        return liveEndpointUrl;
     }
 
-    void setLiveEndpoint(URI liveEndpoint) {
+    void setLiveEndpoint(URL liveEndpoint) {
         try {
-            this.liveEndpointURL = buildLiveUri(liveEndpoint);
-        } catch (URISyntaxException e) {
+            this.liveEndpointUrl = buildLiveUri(liveEndpoint);
+        } catch (MalformedURLException e) {
             throw new IllegalStateException("could not construct live endpoint uri", e);
         }
     }
 
-    void setStatsbeatEndpoint(URI statsbeatEndpoint) {
+    void setStatsbeatEndpoint(URL statsbeatEndpoint) {
         try {
-            this.statsbeatEndpointUrl = buildIngestionUri(statsbeatEndpoint);
-        } catch (URISyntaxException e) {
+            this.statsbeatEndpointUrl = buildIngestionUrl(statsbeatEndpoint);
+        } catch (MalformedURLException e) {
             throw new IllegalStateException("could not construct statsbeat ingestion endpoint uri", e);
         }
     }
 
-    public URI getProfilerEndpoint() {
+    public URL getProfilerEndpoint() {
         return profilerEndpoint;
     }
 
-    void setProfilerEndpoint(URI profilerEndpoint) {
+    void setProfilerEndpoint(URL profilerEndpoint) {
         this.profilerEndpoint = profilerEndpoint;
     }
 
-    public URI getSnapshotEndpoint() {
+    public URL getSnapshotEndpoint() {
         return snapshotEndpoint;
     }
 
-    void setSnapshotEndpoint(URI snapshotEndpoint) {
+    void setSnapshotEndpoint(URL snapshotEndpoint) {
         this.snapshotEndpoint = snapshotEndpoint;
     }
 }
